--- a/frontend/src/styles/_global.scss
+++ b/frontend/src/styles/_global.scss
@@ -1,24 +1,10 @@
 $lg: 1080px;
-$md: 765ox;
-$sm: 480px;
-
-
-@mixin  tablet {
-    @media (max-width:#{$md}) {
-        @content
-    }
-}
-
-@mixin  mobile {
-    @media (max-width:#{$sm}) {
-        @content
-    }
-}
-
+$md: 865px;
+$sm: 650px;
 
 :root {
-    --texto-btn: #f2f2f2;
-    --texto-footer: #fff;
+    --texto_btn: #f2f2f2;
+    --texto_footer: #fff;
     --texto: #333;
     --titulo: #111;
 
@@ -28,38 +14,52 @@ $sm: 480px;
     --footer: #333;
 
     --destaque: #FFD900;
+    --destaque_hover: #907a00;
 
     --btn: #333;
     --sombra: #ccc;
     
-    --borda: 1px solid var(--borda-cor);
-    --borda-cor: #333;
-    --borda-rad: 15px;
+    --borda: 1px solid var(--borda_cor);
+    --borda_hover: 3px solid var(--borda_cor);
+    --borda_active: 3px solid var(--destaque);
+    --borda_cor: #333;
+    --borda_rad: 15px;
     
-    --hover: all .1s ease-out;
+    --hover: all .1s ease-in-out;
 
-    --f-capa: 54px;
-    --f-titulo: 22px;
-    --f-destaque: 44px;
-    --f-texto: 20px;
-    --f-logo: 26px;
+    --f_capa: 54px;
+    --f_titulo: 22px;
+    --f_destaque: 44px;
+    --f_texto: 20px;
+    --f_logo: 35px;
+    --f_legenda: 18px;
+    --f_btn_mobile: 35px;
 
-    @include tablet{
-        --f-capa: 48px;
-        --f-titulo: 22px;
-        --f-destaque: 38px;
-        --f-texto: 20px;
-        --borda-rad: 10px;
-        --f-logo: 24px;
+    --header: 125px;
+
+}
+
+@media screen and (max-width: $md) {
+    :root {
+        --f_capa: 48px;
+        --f_titulo: 22px;
+        --f_destaque: 38px;
+        --f_texto: 20px;
+        --borda_rad: 10px;
+        --f_logo: 32px;
+        --header: 100px;
     }
-    @include mobile{
-        --f-capa: 36px;
-        --f-destaque: 32px;
-        --f-texto: 16px;
-        --borda-rad: 5px;
-        --f-logo: 20px;
+}
+
+@media screen and (max-width: $sm) {
+    :root {
+        --f_capa: 36px;
+        --f_destaque: 32px;
+        --f_texto: 16px;
+        --borda_rad: 5px;
+        --f_logo: 30px;
+        --header: 85px;
     }
-    
 }
 
 * {
@@ -67,9 +67,6 @@ $sm: 480px;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
-    @include tablet{}
-    @include mobile{}
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -81,7 +78,7 @@ h1, h2, h3, h4, h5, h6 {
 a, p, span, li, div {
     color: inherit;
     text-decoration: none;
-    font-size: var(--f-texto);
+    font-size: var(--f_texto);
     font-weight: 500;
 }
 
@@ -92,5 +89,6 @@ ul {
 .center {
     max-width: 1440px;
     margin: 0 auto;
+    padding: 0 2%;
 }
 
