update rotas pro post

--- a/frontend/src/components/mobile/mobile.scss
+++ b/frontend/src/components/mobile/mobile.scss
@@ -19,6 +19,8 @@ $sm: 650px;
 
 @media screen and (max-width: $sm) {
     .mobile {
-        display: block !important;
+        display: flex !important;
+        justify-content: center;
+        align-items: center;
     }
 }
