--- a/frontend/src/styles/_global.scss
+++ b/frontend/src/styles/_global.scss
@@ -6,37 +6,43 @@ $sm: 650px;
     --texto_btn: #f2f2f2;
     --texto_footer: #fff;
     --texto: #333;
+    --texto_placeholder: #777;
     --titulo: #111;
+
     --bg: #fff;
     --box: #f2f2f2;
     --card: #ccc;
     --footer: #333;
+    --sep: #ccc;
 
     --destaque: #FFD900;
     --destaque_hover: #907a00;
     
-
     --btn: #333;
-    --sombra: #ccc;
+    --btn_hover: #777;
+    --sombra: #eee;
     
     --borda: 1px solid var(--borda_cor);
+    --borda_share: 1px solid var(--card);
     --borda_hover: 3px solid var(--borda_cor);
     --borda_active: 3px solid var(--destaque);
     --borda_cor: #333;
     --borda_rad: 15px;
+    --borda_rounded: 5px;
     
     --hover: all .1s ease-in-out;
 
     --f_capa: 54px;
     --f_titulo: 22px;
+    --f_news: 36px;
     --f_destaque: 44px;
     --f_texto: 20px;
     --f_logo: 35px;
     --f_legenda: 18px;
     --f_btn_mobile: 35px;
+    --f_btn: 20px;
 
     --header: 125px;
-
 }
 
 @media screen and (max-width: $md) {
@@ -45,9 +51,10 @@ $sm: 650px;
         --f_titulo: 22px;
         --f_destaque: 38px;
         --f_texto: 20px;
-        --borda_rad: 10px;
         --f_logo: 32px;
+        --f_news: 30px;
         --header: 100px;
+        --borda_rad: 10px;
     }
 }
 
@@ -56,8 +63,9 @@ $sm: 650px;
         --f_capa: 36px;
         --f_destaque: 32px;
         --f_texto: 16px;
-        --borda_rad: 5px;
         --f_logo: 30px;
+        --f_news: 28px;
+        --borda_rad: 5px;
         --header: 85px;
     }
 }
@@ -67,6 +75,7 @@ $sm: 650px;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: var(--texto);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -90,5 +99,9 @@ ul {
     max-width: 1440px;
     margin: 0 auto;
     padding: 0 2%;
+}
+
+img {
+    border-radius: var(--borda_rounded);
 }
 
