--- a/frontend/src/components/cards/card.scss
+++ b/frontend/src/components/cards/card.scss
@@ -1,3 +1,5 @@
+$card: 300px;
+
 .card__post {
     width: 100%;
     margin: 2rem 0;
@@ -7,16 +9,18 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        width: 100%;
 
         .img__card__post {
             flex: 1;
-            width:300px;
-            height: 300px;
-
+            width: $card !important;
+            height: $card !important;
+            
             img {
-                width: 100%;
-                height: 100%;
+                width: 100% !important;
+                height: 100% !important;
                 object-fit: cover;
+                box-shadow: 0px 3px 10px var(--sombra);
             }
         }
 
@@ -26,6 +30,7 @@
             h3 {
                 font-size: var(--f_titulo);
                 font-weight: 500;
+                text-align: center;
             }
         }
     }
@@ -33,7 +38,7 @@
 
 $sm: 650px;
 @media screen and (max-width: $sm) {
-    .img__card__post {
-        width: 85% !important;
+    .img__card__post {        
+        width: 100% !important;
     }
 }
