--- a/frontend/src/components/compartilhar/share.scss
+++ b/frontend/src/components/compartilhar/share.scss
@@ -8,13 +8,20 @@
     border: var(--borda_share);
     box-shadow: 0px 3px 10px var(--sombra);
 
+    
     .box__share {
         padding: .4rem 1.25em;
+        width: 100%;
         transition: var(--hover);
         display: flex;
         flex-direction: row;
         align-items: center;
         gap: 1rem;
+        
+        
+        &:first-of-type {
+            border-bottom: 1px solid var(--card);
+        }
         
         .share__icon {
             font-size: var(--f_texto);
@@ -53,4 +60,14 @@ $sm: 650px;
     .box__share {
         padding: 1rem !important;
     }
+
+    .box__complete {
+        flex-direction: column;
+
+        .sep {
+            display: none;
+        }
+    }
+
+   
 }
