--- a/frontend/src/components/cards/card.scss
+++ b/frontend/src/components/cards/card.scss
@@ -13,12 +13,12 @@ $card: 300px;
 
         .img__card__post {
             flex: 1;
-            width: $card !important;
-            height: $card !important;
+            width: $card;
+            height: $card;
             
             img {
-                width: 100% !important;
-                height: 100% !important;
+                width: 100% ;
+                height: 100% ;
                 object-fit: cover;
                 box-shadow: 0px 3px 10px var(--sombra);
             }
