--- a/frontend/src/components/contact/contact.scss
+++ b/frontend/src/components/contact/contact.scss
@@ -113,3 +113,25 @@ section.contact {
         }
     }
 }
+
+@media screen and (max-width: 700px) {
+    .container__contact {
+        flex-direction: column !important;
+
+        .text__contact {
+            text-align: center;
+            
+            ul {
+                li {
+                    gap: .5rem;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+        }
+
+        .form__contact {
+            margin-top: 5rem;
+        }
+    }
+}
