--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -1,6 +1,5 @@
-$lg: 1080px;
-$md: 865px;
-$sm: 650px;
+$md: 650px;
+
 
 header.topo {
     width: 100%;
@@ -14,7 +13,7 @@ header.topo {
     }
 }
 
-@media screen and (max-width: $sm) {
+@media screen and (max-width: $md) {
     .container__topo {
         flex-direction: column;
         justify-content: center;
@@ -22,3 +21,96 @@ header.topo {
 }
 
 
+$sm: 920px;
+
+.nav__topo {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 3rem;
+    
+    .lista__topo {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 3rem;
+        
+        .lista__auth {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-end;
+            gap: 3rem;
+            background: var(--destaque) !important;
+            color: var(--f_texto) !important;
+            height: 100%;
+            padding: 0 5%;
+        }
+        
+        .item__lista__topo {
+            height: var(--header);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: var(--hover);
+            
+            .link__lista__topo {
+                font-size: var(--f_texto);
+            }
+            
+            &:hover {
+                border-bottom: var(--borda_hover);
+            }
+            
+            &:active {
+                border-bottom: var(--borda_active);
+            }
+        }
+    }
+
+    .admin__reg {
+        background: var(--destaque) !important;
+        padding: 0 5%;
+        
+        .item__lista__topo {
+            font-weight: 700;
+        }
+    }
+
+    .lista__topo__mob {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        gap: 3rem;
+    }
+}
+
+@media screen and (max-width: $sm) {
+    .lista__topo {
+        display: none !important;
+    }
+}
+
+.mobile {
+    display: none;
+    font-size: var(--f_btn_mobile);
+    cursor: pointer;
+
+    &:hover {
+        color: var(--destaque_hover);
+    }
+    &:active {
+        color: var(--destaque);
+    }
+}
+
+@media screen and (max-width: $sm) {
+    .mobile {
+        display: flex !important;
+        justify-content: center;
+        align-items: center;
+    }
+}
